...

  @override
  Widget build(BuildContext context) {
    final screenWidth = MediaQuery.of(context).size.width;

    return Scaffold(
      key: const Key('dashboardScreen'),
      backgroundColor: AppColors.background,
      body: SafeArea(
        top: false,
        child: Consumer<AccountProvider>(
          builder: (context, provider, child) {
            final hasOfflineData =
...
